syntax = "proto3";

option go_package = "github.com/TylerAldrich814/commons/api";

package api;

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (CreateOrderResponse);
  rpc UpdateOrder(CreateOrderResponse) returns (CreateOrderResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}

service StockService {
  rpc CheckIfItemIsInStock(CheckIfItemIsInStockRequest) returns (CheckIfItemIsInStockResponse);
  rpc GetItems(GetItemsRequest) returns (GetItemsResponse);
}

message CreateOrderResponse {
  string id           = 1;
  string customer_id  = 2;
  string status       = 3;
  repeated Item items = 4;
  string paymentLink  = 5;
}

message GetOrderRequest {
  string order_id    = 1;
  string customer_id = 2;
}

message DeleteOrderRequest {
  string order_id    = 1;
  string customer_id = 2;
}

message DeleteOrderResponse {
  string order_id    = 1;
}

message Item {
  string id       = 1;
  string name     = 2;
  int32  quantity = 3;
  string price_id = 4;
}

message ItemsWithQuantity {
  string id       = 1;
  int32  quantity = 2;
}

message CreateOrderRequest {
  string customer_id = 1;
  repeated ItemsWithQuantity items = 2;
}

message CheckIfItemIsInStockRequest {
  repeated ItemsWithQuantity items = 1;
}

message CheckIfItemIsInStockResponse {
  bool in_stock       = 1;
  repeated Item items = 2;
}

message GetItemsRequest {
  repeated string item_ids = 1;
}
message GetItemsResponse {
  repeated Item items = 1;
}
